--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.2.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
