--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
           npm run build
       - uses: actions/upload-artifact@v4
         with:
-          name: webpack artifacts
+          name: webpack-artifacts
           path: public/
 
   test:
@@ -38,7 +38,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v4
       with:
-        name: webpack artifacts
+        name: webpack-artifacts
         path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
