--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,10 +19,12 @@ jobs:
         run: |
           npm install
           npm run build
-      - uses: actions/upload-artifact@v4
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.0.0
         with:
-          name: webpack-artifacts
+          name: web-artifact
           path: public/
+          if-no-files-found: error
 
   test:
     runs-on: ubuntu-latest
@@ -36,9 +38,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/download-artifact@v4
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4
       with:
-        name: webpack-artifacts
+        name: web-artifact
         path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
