--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
           npm install
           npm run build
       - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v4.0.0
+      - uses: actions/upload-artifact@v4.0.0
         with:
           name: web-artifact
           path: public/
