--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/upload-artifact@v4.0.0
         with:
           name: web-artifact
-          path: public/
+          path: path/to/artifact/
           if-no-files-found: error
 
   test:
