--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v4.0.1
         with:
-          node-version: ‘12.x’
+          node-version: 16
+          cache: 'npm'
       - name: npm install and build webpack
         run: |
           npm install
