--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,6 +51,6 @@ jobs:
     - name: npm install, and test
       run: |
         npm install
-        npm test
+        npm run build
       env:
         CI: true
